Closed Bug 1279448 Opened 8 years ago Closed 8 years ago

Missing argument to format string in |ConvertSourceSurfaceToNV12|

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: tzimmermann, Assigned: tzimmermann)

References

Details

Attachments

(1 file)

Apparently fallout from bug 1278452. The error message is: ../../../../../hg.mozilla.org/mozilla-central/dom/media/omx/OMXCodecWrapper.cpp: In function 'nsresult android::ConvertSourceSurfaceToNV12(const RefPtr<mozilla::gfx::SourceSurfa ce>&, uint8_t*)': ../../../../../hg.mozilla.org/mozilla-central/dom/media/omx/OMXCodecWrapper.cpp:37:69: error: format '%s' expects a matching 'char*' argument [-Werror=format=] __android_log_print(ANDROID_LOG_ERROR, "OMXCodecWrapper", ##args); \ ^ ../../../../../hg.mozilla.org/mozilla-central/dom/media/omx/OMXCodecWrapper.cpp:417:5: note: in expansion of macro 'CODEC_ERROR' CODEC_ERROR("Getting surface %s from image failed"); ^
Component: Audio/Video → Audio/Video: Playback
Attachment #8761968 - Flags: review?(dglastonbury) → review+
Pushed by tdz@users.sourceforge.net: https://hg.mozilla.org/integration/mozilla-inbound/rev/356b91412494 Remove '%s' from format string without argument in |ConvertSourceSurfaceToNV12|, r=kamidphish
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Depends on: 1280844
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: