Bug 1279448: Remove '%s' from format string without argument in |ConvertSourceSurfaceToNV12|, r=kamidphish

MozReview-Commit-ID: E1Beibwhqyj